--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@google/maps": "^1.1.3",
     "astro": "^2.10.14",
     "sass": "^1.58.0"
+  },
+  "devDependencies": {
+    "@types/google.maps": "^3.55.5",
+    "@types/google__maps": "^0.5.20"
   }
 }
