--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,48 +1,44 @@
-# Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: Deploy to Astro to Github Pages
 
 on:
-    # Runs on pushes targeting the default branch
+    # Trigger the workflow every time you push to the `main` branch
+    # Using a different branch name? Replace `main` with your branch’s name
     push:
-        branches: ["main"]
-
-    # Allows you to run this workflow manually from the Actions tab
+        branches: [main]
+    # Allows you to run this workflow manually from the Actions tab on GitHub.
     workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+# Allow this job to clone the repo and create a page deployment
 permissions:
     contents: read
     pages: write
     id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-concurrency:
-    group: "pages"
-    cancel-in-progress: false
-
 jobs:
-    deploy:
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout your repository using git
+              uses: actions/checkout@v4
+            - name: Install, build, and upload your site
+              uses: withastro/action@v3
+
+    web-deploy:
+        name: 🎉 Deploy
+        runs-on: ubuntu-latest
+        # environment: deploy
+        needs: build
+
+        permissions:
+            pages: write # to deploy to Pages
+            id-token: write # to verify the deployment originates from an appropriate source
+
+        # Deploy to the github-pages environment
         environment:
             name: github-pages
             url: ${{ steps.deployment.outputs.page_url }}
-        runs-on: ubuntu-latest
+
         steps:
-            - name: Checkout
-              uses: actions/checkout@v3
-            - name: Install dependencies
-              run: yarn install --prefer-offline --frozen-lockfile --ignore-engines --registry https://registry.npmjs.org --network-timeout 300000
-            - name: Build
-              run: |
-                  yarn build --force
-                  touch ./dist/.nojekyll
-            - name: Setup Pages
-              uses: actions/configure-pages@v3
-            - name: Upload artifact
-              uses: actions/upload-artifact@v4
-              with:
-                  # Upload entire repository
-                  path: "dist/"
             - name: Deploy to GitHub Pages
               id: deployment
-              uses: actions/deploy-pages@v2
+              uses: actions/deploy-pages@v4 # or specific "vX.X.X" version tag for this action
